# rt

./: .gitignore  Cargo.toml  PLAN.md  README.md  project-map.js
.github/workflows/: release.yml
bench/: term-render-bench.sh
ci/: verify.sh
crates/rt/: Cargo.toml  build.rs
crates/rt-config/: Cargo.toml
crates/rt-config/src/: keys.rs  lib.rs
crates/rt-config/tests/: keybindings.rs
crates/rt-core/: Cargo.toml
crates/rt-core/src/: layout.rs  lib.rs
crates/rt-core/tests/: layout.rs
crates/rt-engine/: Cargo.toml
crates/rt-engine/src/: lib.rs  palette.rs  vtpane.rs
crates/rt-engine/tests/: echo.rs  history.rs
crates/rt-mux/: Cargo.toml
crates/rt-mux/src/: main.rs
crates/rt-session/: Cargo.toml
crates/rt-session/src/: lib.rs
crates/rt-session/tests/: controller.rs
crates/rt/src/: backend.rs  bg_effect.rs  clip_history.rs  clipboard.rs  gl_backend.rs  input.rs  lib.rs  main.rs  manual.rs  menu.rs  preferences.rs  prefs_model.rs  raster.rs  render.rs  x11_blur.rs  x11_present.rs  xrender_backend.rs
crates/rt/src/chrome/: colour_picker.rs  instruments.rs  manual.rs  menu.rs  mod.rs  prefs.rs  search.rs
crates/rt/tests/: input.rs  instrument_compositing.rs  prefs_native.rs  x11_present_roundtrip.rs  xrender_commands.rs
crates/vt-conformance/: Cargo.toml
crates/vt-conformance/corpus/: README.md
crates/vt-conformance/examples/: term_bench.rs
crates/vt-conformance/src/: lib.rs  vendored.rs  vtterm.rs
crates/vt-conformance/tests/: conformance.rs  vtterm_diff.rs  vtterm_reflow.rs  vtterm_spec.rs
crates/vt-parser/: Cargo.toml
crates/vt-parser/src/: lib.rs
crates/vt-term/: Cargo.toml
crates/vt-term/src/: lib.rs
docs/: ADR-0004-widget-toolkit.md  COLUMNS.md  KNOWN_ISSUES.md  PORTING_LOG.md  ROADMAP.md  engine-divergence.md  engine-seam.md  mullion-terminal-host-prompt.md  own-engine-plan.md  upstreaming-forks.md  vendored-engine.md  vt-parser-design.md  vt-term-design.md  wishlist  wishlist-plan.md  x11-support-plan.md
docs/superpowers/plans/: 2026-07-13-mechanism-c-xrender-backend.md  2026-07-14-instrument-compositing.md  2026-07-14-slice-2-xrender-chrome.md  2026-07-15-native-preferences.md  2026-07-17-remote-translucency.md  2026-07-24-anchored-selection.md
docs/superpowers/specs/: 2026-07-12-damage-rendering-x11-present-design.md  2026-07-14-slice-2-xrender-chrome-design.md  2026-07-15-native-preferences-design.md  2026-07-17-remote-translucency-design.md  2026-07-19-native-colour-picker-design.md  2026-07-24-clipboard-history-design.md
docs/upstreaming/: 01-vte-batched-print_str.patch  02-alacritty_terminal-input_run.patch  PR-1-vte.md  PR-2-alacritty_terminal.md
extra/linux/: install.sh  io.github.perpetualbits.rt.desktop
packaging/: nfpm.yaml
packaging/riscv64/: Dockerfile
snap/: snapcraft.yaml
