[package]
name = "rt-config"                   # keybindings + config, ported from Terminator's config.py
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "rt configuration and keybindings (Terminator-compatible syntax), pure and testable"

# Dependency-free on purpose: parsing Terminator's keybinding strings and holding
# the config is pure logic, so it unit-tests headlessly like rt-core.
[dependencies]
