[package]
name = "rt-config"                   # keybindings + config, ported from Terminator's config.py
version = "0.2.6"
edition = "2021"
license = "GPL-3.0-or-later"
description = "rt configuration and keybindings (Terminator-compatible syntax), pure and testable"

# serde + toml persist Settings to ~/.config/rt/config.toml. Both are pure Rust,
# so rt-config still builds/tests headlessly.
[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"
