[package]
name = "rt-engine"                   # thin, well-commented wrapper over alacritty_terminal
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "rt terminal engine: PTY + alacritty_terminal Term, exposing a render snapshot"

[dependencies]
# The heart of the "use alacritty to make it faster" mandate: we reuse
# alacritty's battle-tested, damage-tracked terminal engine (PTY, grid, VTE/ANSI
# parser) instead of reimplementing it. 0.26.0 is the published version matching
# the source we studied in reference/alacritty.
alacritty_terminal = { path = "../../vendor/alacritty_terminal" }  # vendored throughput fork (see docs/upstreaming-forks.md)
