[package]
name = "rt-mux"                      # rt's text-mode sibling: a tmux-style multiplexer
version = "0.2.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "rt-mux: a text-mode terminal multiplexer — rt-engine panes hosted in mullion tiles"

[[bin]]
name = "rt-mux"
path = "src/main.rs"

[dependencies]
# The SAME engine rt's Wayland GUI uses: PTY + alacritty_terminal, exposing a
# cell snapshot. rt-mux reuses it verbatim, so both front-ends share one
# battle-tested terminal core with zero duplicated logic.
rt-engine = { path = "../rt-engine" }
# The tiling/render engine: a ratatui-shaped TUI cell-buffer library. We host
# rt-engine panes inside its tiles (cells-into-cells) and let it do the chrome.
# Pinned to the exact upstream commit rt-mux builds against (mullion's
# 'videoplayer' tip, which is ahead of tag v0.3.0). A git dep — not a path —
# so a clean checkout / CI builds without mullion sitting next to the repo.
# For local co-development against ~/git/mullion, an (uncommitted, gitignored)
# .cargo/config.toml `paths` override redirects this back to the working copy.
mullion = { git = "https://github.com/perpetualbits/mullion.git", rev = "f5bc146aeb48046e3d6654d7c8e488eea38825da" }
# Matches mullion's crossterm so Event/KeyCode types line up across the seam.
crossterm = "0.28"
# For the side-channel pipe jacks: mkfifo + non-blocking open (O_NONBLOCK).
libc = "0.2"
