[package]
name = "rt"                          # the binary: a loose Rust port of Terminator
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "rt — a fast, tiling terminal emulator (loose Rust port of Terminator)"
repository = "https://github.com/perpetualbits/git-rt"

# Split into a library (pure, testable input mapping + app plumbing) and a thin
# binary, so the winit key -> Chord translation can be unit-tested headlessly
# while the GL rendering lives in the binary path that needs a display.
[lib]
name = "rt_app"
path = "src/lib.rs"

[[bin]]
name = "rt"
path = "src/main.rs"

[features]
default = []
# DEV-ONLY: adds the X11/XWayland backends so the window can be captured with
# `xwd` on compositors that lack wlr-screencopy (grim). Release packages are
# built WITHOUT this feature, so shipped binaries stay Wayland-native (the
# dependency tree keeps zero x11 crates). For screenshots: cargo run -p rt --features x11
x11 = ["winit/x11", "glutin/glx", "glutin/x11", "glutin-winit/glx", "glutin-winit/x11"]

[dependencies]
rt-core = { path = "../rt-core" }
rt-config = { path = "../rt-config" }
rt-engine = { path = "../rt-engine" }
rt-session = { path = "../rt-session" }

# Windowing + GL, pinned to the same versions alacritty ships so we inherit a
# known-good winit/glutin combination.
#
# rt is Wayland-native by design (ADR-0003): no X11/XWayland fallback. We enable
# only winit's `wayland` backend (dlopen so we don't hard-link libwayland at
# build time) and glutin's `egl` (the Wayland GL path). The `x11`/`glx` features
# are deliberately omitted so an X11 code path cannot even be compiled in.
winit = { version = "0.30.9", default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }
glutin = { version = "0.32.2", default-features = false, features = ["egl", "wayland"] }
# glutin-winit's DEFAULT features re-enable glx/x11, which would drag X11 crates
# back into the tree — so disable defaults and opt into only egl+wayland.
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6"            # handle types passed between winit and glutin
glow = "0.17"                        # OpenGL wrapper; 0.17 matches egui_glow so they share the GL context
fontdue = "0.9"                      # CPU glyph rasteriser feeding the GL atlas
fontdb = "0.23"                      # pure-Rust system font discovery (family picker; no X11)
log = "0.4"                          # diagnostics
env_logger = "0.11"                  # RUST_LOG-driven logging for the binary
# egui for UI chrome (preferences dialog, colour/font pickers). default-features
# OFF everywhere to avoid egui-winit's `clipboard` feature (arboard → X11) and
# any x11 backend; we render egui as an overlay via egui_glow (ADR-0004).
egui = "0.35"                        # core: keep default features (default_fonts, color-picker) — no X11
egui-winit = { version = "0.35", default-features = false, features = ["wayland"] } # NO clipboard (arboard→X11)
egui_glow = { version = "0.35", default-features = false }
# KDE/KWin background-blur request (org_kde_kwin_blur). Both crates are already
# in the tree via winit, so depending on them directly adds no new crates; it
# just lets rt ask KWin to blur behind its surface. No-op on non-KDE. The
# versions must match winit's so the shared wl_surface object is compatible.
wayland-client = "0.31"
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
# Standard staging blur protocol (ext-background-effect-v1): KDE 6.7+, COSMIC,
# niri. Already in the tree via winit; the `staging` feature exposes the binding.
# The KWin dep above is kept for older Plasma; this is the cross-compositor path.
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
# Clipboard + PRIMARY selection over the Wayland connection. Chosen over arboard
# because arboard pulls X11 crates on Linux, which would break Wayland-native;
# smithay-clipboard is pure Wayland and ties into the window's wl_display.
smithay-clipboard = "0.7"
# For the patch-bay pipe jacks: mkfifo + non-blocking open (O_NONBLOCK).
libc = "0.2"
