[package]
name = "rt"                          # the binary: a loose Rust port of Terminator
version = "0.2.4"
edition = "2021"
license = "GPL-3.0-or-later"
description = "rt — a fast, tiling terminal emulator (loose Rust port of Terminator)"
repository = "https://github.com/perpetualbits/git-rt"

# Split into a library (pure, testable input mapping + app plumbing) and a thin
# binary, so the winit key -> Chord translation can be unit-tested headlessly
# while the GL rendering lives in the binary path that needs a display.
[lib]
name = "rt_app"
path = "src/lib.rs"

[[bin]]
name = "rt"
path = "src/main.rs"

[features]
# Universal by default: ship a single binary that runs on Wayland AND X11 (winit
# picks the backend at runtime, preferring native Wayland — see build_event_loop).
# Build a lean Wayland-only binary with --no-default-features if you want zero
# X11 crates.
default = ["x11"]
# First-class X11 support: adds the X11/XWayland backends (winit/glutin) AND an
# X11 clipboard (arboard) so copy/paste + PRIMARY work, not just rendering. The
# same code runs on either backend — winit auto-selects from WAYLAND_DISPLAY /
# DISPLAY at runtime, so `--features x11` is a universal binary. The DEFAULT
# build omits this feature, keeping the dependency tree Wayland-only (zero X11
# crates). Build/install universal: cargo install --path crates/rt --features x11
x11 = ["winit/x11", "glutin/glx", "glutin/x11", "glutin-winit/glx", "glutin-winit/x11", "dep:arboard", "dep:x11rb"]

[dependencies]
rt-core = { path = "../rt-core" }
rt-config = { path = "../rt-config" }
rt-engine = { path = "../rt-engine" }
rt-session = { path = "../rt-session" }

# Windowing + GL, pinned to the same versions alacritty ships so we inherit a
# known-good winit/glutin combination.
#
# rt is Wayland-native by design (ADR-0003): no X11/XWayland fallback. We enable
# only winit's `wayland` backend (dlopen so we don't hard-link libwayland at
# build time) and glutin's `egl` (the Wayland GL path). The `x11`/`glx` features
# are deliberately omitted so an X11 code path cannot even be compiled in.
winit = { version = "0.30.9", default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }
glutin = { version = "0.32.2", default-features = false, features = ["egl", "wayland"] }
# glutin-winit's DEFAULT features re-enable glx/x11, which would drag X11 crates
# back into the tree — so disable defaults and opt into only egl+wayland.
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6"            # handle types passed between winit and glutin
glow = "0.17"                        # OpenGL wrapper; 0.17 matches egui_glow so they share the GL context
fontdue = "0.9"                      # CPU glyph rasteriser feeding the GL atlas
fontdb = "0.23"                      # pure-Rust system font discovery (family picker; no X11)
log = "0.4"                          # diagnostics
env_logger = "0.11"                  # RUST_LOG-driven logging for the binary
# egui for UI chrome (preferences dialog, colour/font pickers). default-features
# OFF everywhere to avoid egui-winit's `clipboard` feature (arboard → X11) and
# any x11 backend; we render egui as an overlay via egui_glow (ADR-0004).
egui = "0.35"                        # core: keep default features (default_fonts, color-picker) — no X11
egui-winit = { version = "0.35", default-features = false, features = ["wayland"] } # NO clipboard (arboard→X11)
egui_glow = { version = "0.35", default-features = false }
# KDE/KWin background-blur request (org_kde_kwin_blur). Both crates are already
# in the tree via winit, so depending on them directly adds no new crates; it
# just lets rt ask KWin to blur behind its surface. No-op on non-KDE. The
# versions must match winit's so the shared wl_surface object is compatible.
wayland-client = "0.31"
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
# Standard staging blur protocol (ext-background-effect-v1): KDE 6.7+, COSMIC,
# niri. Already in the tree via winit; the `staging` feature exposes the binding.
# The KWin dep above is kept for older Plasma; this is the cross-compositor path.
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
# Clipboard + PRIMARY selection over the Wayland connection: pure Wayland, ties
# into the window's wl_display, keeps the default tree free of X11 crates. The
# X11 build pairs this with arboard (below) via the cross-backend `clipboard`
# module — arboard is only pulled in by the `x11` feature.
smithay-clipboard = "0.7"
# X11 clipboard (CLIPBOARD + PRIMARY), only under the `x11` feature. default-
# features off so it's x11-only (no image-data, no wayland-data-control) — the
# X11 crates it pulls are exactly what that feature is opting into.
arboard = { version = "3", default-features = false, optional = true }
# X11 background blur (`_KDE_NET_WM_BLUR_BEHIND_REGION`), only under `x11`.
# Already in the tree via arboard, so naming it here adds no new crate.
x11rb = { version = "0.13", optional = true }
# For the patch-bay pipe jacks: mkfifo + non-blocking open (O_NONBLOCK).
libc = "0.2"
